Add empty CONTRIBUTING. Remove dvipdfm to let github action compile with pdf

--- a/doc/design/standards.tex
+++ b/doc/design/standards.tex
@@ -1,6 +1,6 @@
 \documentclass{report}
 \usepackage{graphics}
-\usepackage[dvipdfm]{hyperref}
+% \usepackage[dvipdfm]{hyperref}
 
 %
 % File: standards.tex
